@@ -36,7 +36,7 @@ public class SimpleTestJavaApp implements SimpleTestJavaAppMBean {
     // Integers
     private final int shouldBe100 = 100;
     private final int shouldBe1000 = 1000;
-    private final Integer int424242 = new Integer(424242);
+    private final Integer int424242 = Integer.valueOf(424242);
     private final AtomicInteger atomic42 = new AtomicInteger(42);
 
     private int shouldBeCounter = 0;
@@ -45,7 +45,7 @@ public class SimpleTestJavaApp implements SimpleTestJavaAppMBean {
     private final float primitiveFloat = 123.4f;
     private final Float instanceFloat = 567.8f;
     private final AtomicLong atomic4242 = new AtomicLong(4242);
-    private final Long long42424242 = new Long(42424242);
+    private final Long long42424242 = Long.valueOf(42424242);
 
     // String
     private final String shouldBeConverted = "ShouldBe5";
@@ -54,8 +54,8 @@ public class SimpleTestJavaApp implements SimpleTestJavaAppMBean {
     // Others
     private final boolean shouldBeBoolean = true;
     private final Map<String, Integer> hashmap = new HashMap<String, Integer>();
-    private final Object object1337 = new Double(13.37);
-    private final BigDecimal numberBig = new BigDecimal(123456788901234567890.0);
+    private final Object object1337 = Double.valueOf(13.37);
+    private final BigDecimal numberBig = BigDecimal.valueOf(123456788901234567890.0);
     private final TabularDataSupport tabulardata;
     private final CompositeType compositetype;
 
